# studio-b3

./: .env.example  .gitignore  .gitmodules  .npmrc  CNAME  CONTRIBUTION.md  README.md  README.zh.md  next.config.js  nx.bat  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.base.json
.github/workflows/: deploy.yml  local-server-build.yml  release.yml
.storybook/: main.ts  preview.ts
3b/: package.json
components/: settings.js
components/editor/: ai-bubble-menu.jsx  auto-complete.jsx  live-editor.jsx  menu-bar.jsx  slash-commands.jsx  slash-menu-view.jsx  ui-select.jsx
docs/: Motivation.mdx  research.md  test-doc.md
editor/: .eslintrc.json  .gitignore  jest.config.js  next.config.ci.js  package-lock.json  package.json  project.json  tsconfig.json
editor/styles/: Home.module.css  global.css
local_server/: .gitignore  Cargo.toml  README.md  project.json
local_server/_fixtures/: header.docx
local_server/src/: app_state.rs  create_app.rs  document_handler.rs  main.rs
local_server/src/doc_indexes/: doc_indexes.rs  doc_reader.rs  doc_schema.rs  mod.rs
local_server/src/doc_split/: doc_split.rs  doc_splitter.rs  document_type.rs  file_walker.rs  html_splitter.rs  markdown_splitter.rs  mod.rs  office_splitter.rs  pdf_splitter.rs  split.rs  splitter.rs  word_splitter.rs
local_server/src/infra/: dir_watcher.rs  file_walker.rs  mod.rs
local_server/src/scraper/: article.rs  chunk.rs  mod.rs
pages/: _app.js  editor.css  index.js  settings.js
prompts/: prompts-manager.js
prompts/prebuild/: menubar-prompts.ts
src/components/: settings.js  settings.tsx
src/i18n/: i18n.js  i18n.ts
src/pages/: _app.js  _app.tsx  editor.css  index.js  index.tsx
src/prompts/: prebuild-prompts.ts  prompts-manager.ts
src/shared/: erniebot.ts
src/types/: custom-action.type.ts  llm-model.type.ts
styles/: Home.module.css  global.css
types/: custom-action.type.ts
web/converter/: package.json  tsconfig.json
web/core/: .eslintrc.cjs  README.md  package.json  tailwind.config.js  tsconfig-build.json  tsconfig.json  tsconfig.node.json  vite.config.mts  (+1 more)
(+202 files in other folders)
