[package]
name = "local_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

# misc
serde = { version = "1.0", features = ["derive"] }

# code-nav
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.1"
tree-sitter-python = "=0.20.2"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.2"
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", tag = "v0.20.0" }

# the documentation splitter
tree-sitter-md = "0.1.7"

# doc scraper
select = "0.6"
url = "2.5.0"

# office ?
# https://github.com/zitsen/ooxml-rs
