[package]
name = "b3_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

# core
flume = "0.11.0"
ignore = "=0.4.20"

anyhow = "1.0.75"

# misc
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"

# embed
enfer_core = "0.1.1"

# code-nav
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.1"
tree-sitter-python = "=0.20.2"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.2"
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", tag = "v0.20.0" }

# the documentation splitter
tree-sitter-md = "0.1.7"

# doc scraper
select = "0.6"
url = "2.5.0"
reqwest = { version = "0.11.20", features = ["rustls-tls-webpki-roots", "cookies", "gzip"], default-features = false }
reqwest-eventsource = "0.5.0"

# document splitter
docx-rs = "0.4.7"

# storage
#sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio-rustls", "chrono", "uuid"] }
# search engine Tantivy?
#tantivy = { version = "0.21.0", features = ["mmap"] }
#tantivy-columnar = "0.2.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-appender = "0.2.2"

# watch dir
notify-debouncer-mini = { version = "0.4.1", default-features = false }
